parser/src/snapshots/rustpython_parser__string_parser__tests__parse_fstring.snap
---
source: compiler/parser/src/string_parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 18,
            },
        ),
        custom: (),
        node: FormattedValue {
            value: Located {
                location: Location {
                    row: 1,
                    column: 3,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 4,
                    },
                ),
                custom: (),
                node: Name {
                    id: "a",
                    ctx: Load,
                },
            },
            conversion: 0,
            format_spec: None,
        },
    },
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 18,
            },
        ),
        custom: (),
        node: FormattedValue {
            value: Located {
                location: Location {
                    row: 1,
                    column: 7,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 8,
                    },
                ),
                custom: (),
                node: Name {
                    id: "b",
                    ctx: Load,
                },
            },
            conversion: 0,
            format_spec: None,
        },
    },
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 18,
            },
        ),
        custom: (),
        node: Constant {
            value: Str(
                "{foo}",
            ),
            kind: None,
        },
    },
]
