parser/src/snapshots/rustpython_parser__string_parser__tests__parse_fstring_nested_spec.snap
---
source: compiler/parser/src/string_parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 15,
            },
        ),
        custom: (),
        node: FormattedValue {
            value: Located {
                location: Location {
                    row: 1,
                    column: 3,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 6,
                    },
                ),
                custom: (),
                node: Name {
                    id: "foo",
                    ctx: Load,
                },
            },
            conversion: 0,
            format_spec: Some(
                Located {
                    location: Location {
                        row: 1,
                        column: 0,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 15,
                        },
                    ),
                    custom: (),
                    node: JoinedStr {
                        values: [
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 0,
                                },
                                end_location: Some(
                                    Location {
                                        row: 1,
                                        column: 15,
                                    },
                                ),
                                custom: (),
                                node: FormattedValue {
                                    value: Located {
                                        location: Location {
                                            row: 1,
                                            column: 8,
                                        },
                                        end_location: Some(
                                            Location {
                                                row: 1,
                                                column: 12,
                                            },
                                        ),
                                        custom: (),
                                        node: Name {
                                            id: "spec",
                                            ctx: Load,
                                        },
                                    },
                                    conversion: 0,
                                    format_spec: None,
                                },
                            },
                        ],
                    },
                },
            ),
        },
    },
]
