parser/src/snapshots/rustpython_parser__string_parser__tests__parse_fstring_not_equals.snap
---
source: compiler/parser/src/string_parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 11,
            },
        ),
        custom: (),
        node: FormattedValue {
            value: Located {
                location: Location {
                    row: 1,
                    column: 3,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 9,
                    },
                ),
                custom: (),
                node: Compare {
                    left: Located {
                        location: Location {
                            row: 1,
                            column: 3,
                        },
                        end_location: Some(
                            Location {
                                row: 1,
                                column: 4,
                            },
                        ),
                        custom: (),
                        node: Constant {
                            value: Int(
                                1,
                            ),
                            kind: None,
                        },
                    },
                    ops: [
                        NotEq,
                    ],
                    comparators: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 8,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 9,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                    ],
                },
            },
            conversion: 0,
            format_spec: None,
        },
    },
]
