parser/src/snapshots/rustpython_parser__string_parser__tests__parse_fstring_selfdoc_prec_space.snap
---
source: compiler/parser/src/string_parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 10,
            },
        ),
        custom: (),
        node: Constant {
            value: Str(
                "x   =",
            ),
            kind: None,
        },
    },
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 10,
            },
        ),
        custom: (),
        node: Constant {
            value: Str(
                "",
            ),
            kind: None,
        },
    },
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 10,
            },
        ),
        custom: (),
        node: FormattedValue {
            value: Located {
                location: Location {
                    row: 1,
                    column: 3,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 4,
                    },
                ),
                custom: (),
                node: Name {
                    id: "x",
                    ctx: Load,
                },
            },
            conversion: 114,
            format_spec: None,
        },
    },
]
