parser/src/snapshots/rustpython_parser__string_parser__tests__parse_fstring_yield_expr.snap
---
source: compiler/parser/src/string_parser.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 10,
            },
        ),
        custom: (),
        node: FormattedValue {
            value: Located {
                location: Location {
                    row: 1,
                    column: 3,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 8,
                    },
                ),
                custom: (),
                node: Yield {
                    value: None,
                },
            },
            conversion: 0,
            format_spec: None,
        },
    },
]
